--- a/content/index.yaml
+++ b/content/index.yaml
@@ -2,7 +2,7 @@
 # https://github.com/srid/emanote/blob/master/default/index.yaml
 
 page:
-  siteTitle: Partially Ordered Note
+  siteTitle: Partially Ordered Notes
 
 template:
   theme: gray
